2011-09-25  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.99 released.

        * Improved Error Message Line number reporting.


2011-09-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.98 released.

        * Fixed code to complement FullAuto -
          default set and other defaults.

        * Eliminated need for Module::Load::Conditional

        * Updated License to GPL 3.0:
          http://opensource.org/licenses/gpl-3.0.html


2011-09-13  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.97 released.

        * Fixed code to complement FullAuto - 
          default set and other defaults.


2011-09-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.96 released.

        * Fixed code to complement FullAuto - now invokes
          default set and other defaults in Solaris.


2011-09-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.95 released.

        * Added code to complement FullAuto - now invokes
          default set and other defaults.


2011-09-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.94 released.

        * Added code to complement FullAuto - now invokes
          default set when one is defined.


2011-08-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.93 released.

        * Added code to complement FullAuto - fixed BerkeleyDB
          error.


2011-08-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.92 released.

        * Added code to complement FullAuto - fixed error
          reporting.


2011-08-18  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.91 released.

        * Added code to complement FullAuto.


2011-08-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.90 released.

        * Added code to complement FullAuto.

