@@ -14,10 +14,10 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 d4754821c9d8c17d3da97c2fc339a3399be4ed0a ChangeLog
+SHA1 1a370f2d21740a2b1173679a8b7b2a1f70d762c4 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 536d4ce30b1934be585da55e463477877c31fe8c MANIFEST
-SHA1 6706bcf0b60f64c94a83406d1e2bff925eab150b META.yml
+SHA1 925efc6ada04a594aeeaad2b54473d3607f91fdb META.yml
 SHA1 85f9401b2c422cd079d521911905670a71d266c1 Makefile.PL
 SHA1 2af679880fb8ac967e5d63069f8ec3b3508425d3 README
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -31,13 +31,13 @@ SHA1 b721c93ca5bc9a6aa863b49af15f1b1de6125935 inc/Module/Install/Makefile.pm
 SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 51dc3e75730503683b174e8f79e19ee24e498705 lib/Term/Menus.pm
+SHA1 86dcb979a467c0808d9ecf5a3a6f473ab6feac7d lib/Term/Menus.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 ded9def7d10cf71606da96112acc159e0aa9a582 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk5/1T4ACgkQdsVAdUjO9ImCAwCgpPXv8AXbxKdPl4AqUpbci5SN
-ulIAnRm23NOgjJjyby/8XwWgDInWlgHr
-=KDjg
+iEYEARECAAYFAk6DDSMACgkQdsVAdUjO9IkYtACbBFZt0oV+cSLxb4trQUwly5aa
+cdcAoJHN+8Lmu3sW4S003pD0ycujfcm1
+=y1+i
 -----END PGP SIGNATURE-----
